--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/netgloo_blog?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:8889/app_notes?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
