--- a/app-front/angular.json
+++ b/app-front/angular.json
@@ -74,7 +74,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app-front:build"
+            "browserTarget": "app-front:build",
+            "proxyConfig": "proxy.config.json"
           },
           "configurations": {
             "production": {
