--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.url = jdbc:mysql://localhost:8889/app_notes?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
-
+spring.profiles.active=prod
