--- a/app-front/package.json
+++ b/app-front/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.config.json",
     "build": "ng build",
-    "prod": "ng build --prod --output-path ../api/src/main/resources/static --base-href api",
+    "prod": "ng build --prod --output-path ../api/src/main/resources/static",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
